# null0-extism

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  count_vowels.null0
carts/: CMakeLists.txt  README.md  colorbars.null0  draw.null0  filesystem.null0  flappybird.null0  hello.null0  input.null0  justlog.null0  null0.h  sound.null0  tracker.null0
carts/c/: null0.h
carts/c/justlog/: .gitignore  Makefile  README.md
carts/c/justlog/src/: main.c  plugin.c
carts/justlog/: main.c
native/: Makefile  README.md
native/src/: main.c
src/: native_host.cpp
tools/cmake/: Findextism-cpp.cmake
